<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddKoss">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/mk"
        tools:layout_editor_absoluteX="79dp" />
    <View
        android:id="@+id/rectangle"
        android:layout_width="270dp"
        android:layout_height="440dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="264dp"
        android:layout_height="34dp"
        android:layout_marginBottom="330dp"
        android:elevation="3dp"
        android:text="@string/Add"
        android:textColor="@color/blue_light"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />

    <EditText
        android:id="@+id/KosName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="93dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rounded"
        android:elevation="15dp"
        android:hint="@string/KosName"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:textColorHint="@color/blue_light"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        app:layout_constraintVertical_bias="0.162"
        tools:layout_editor_absoluteX="71dp" />

    <EditText
        android:id="@+id/AvailRm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="93dp"
        android:background="@drawable/rounded"
        android:hint="@string/RoomVal"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:textColorHint="@color/blue_light"
        android:textStyle="italic"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle"/>

    <Button
        android:id="@+id/lgn2"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rounded"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        app:layout_constraintTop_toBottomOf="@id/AvailRm"
        android:elevation="7dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>