<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login_pemilik">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/mk"
        tools:layout_editor_absoluteX="79dp" />

    <View
        android:id="@+id/rectangle"
        android:layout_width="270dp"
        android:layout_height="440dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        android:text="@string/LogIn"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        android:layout_marginTop="45dp"
        android:textSize="20dp"
        android:textColor="@color/blue_light"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="93dp"
        android:layout_marginRight="93dp"
        android:background="@drawable/rounded"
        android:elevation="15dp"
        android:hint="@string/email"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:textColorHint="@color/blue_light"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="93dp"
        android:layout_marginRight="93dp"
        android:background="@drawable/rounded"
        android:elevation="15dp"
        android:hint="@string/pass"
        android:padding="12dp"
        android:shadowColor="@color/black"
        android:textColorHint="@color/blue_light"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/Email"
        />

    <Button
        android:id="@+id/lgn2"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginBottom="-250dp"
        android:background="@drawable/rounded"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toBottomOf="@id/rectangle"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle"
        android:elevation="7dp"
        />

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lgn2"
        android:text="New here? create here"
        app:layout_constraintLeft_toLeftOf="@id/rectangle"
        app:layout_constraintRight_toRightOf="@id/rectangle"
        android:layout_marginTop="25dp"
        android:textSize="16dp"
        android:textColor="@color/blue_light"
        android:textStyle="italic"/>

</androidx.constraintlayout.widget.ConstraintLayout>