<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Main3Activity">

    <View
        android:id="@+id/midRec"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/UpRec"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="65dp"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/midRec"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/DownRec"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/midRec"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/gradient3"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/midRec"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/gradient3"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/gradient3"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:elevation="4dp"
        android:text="@string/Select"
        android:textColor="@color/blue_light"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/midRec"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@id/midRec"
        app:layout_constraintRight_toRightOf="@id/midRec"
        app:layout_constraintTop_toTopOf="@id/midRec"
        app:layout_constraintVertical_bias="0.74" />

    <Spinner
        android:id="@+id/spinner_languages"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="210dp"
        android:background="@drawable/rounded1"
        android:elevation="2dp"
        android:padding="14dp"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toLeftOf="@id/midRec"
        app:layout_constraintBottom_toBottomOf="@id/midRec"
        app:layout_constraintEnd_toEndOf="@id/midRec"
        app:layout_constraintTop_toTopOf="@id/midRec"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:background="@drawable/rounded2"
        android:elevation="2dp"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@id/midRec"
        app:layout_constraintTop_toTopOf="@id/midRec"
        app:layout_constraintVertical_bias="0.735"
        tools:layout_editor_absoluteX="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:elevation="4dp"
        android:text="@string/Detail"
        android:textColor="@color/blue_light"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/midRec"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@id/midRec"
        app:layout_constraintRight_toRightOf="@id/midRec"
        app:layout_constraintTop_toTopOf="@id/midRec" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/midRec"
        app:layout_constraintTop_toTopOf="@id/midRec"
        android:layout_marginTop="280dp"
        android:hint="@string/send"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="@id/midRec"
        app:layout_constraintLeft_toLeftOf="@id/midRec"
        android:layout_marginLeft="250dp"/>

    <ImageView
        android:id="@+id/bluecircle"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/UpRec"
        app:layout_constraintEnd_toEndOf="@id/UpRec"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@id/UpRec"
        app:layout_constraintTop_toTopOf="@id/UpRec"
        app:srcCompat="@drawable/e" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/bluecircle"
        app:layout_constraintEnd_toEndOf="@+id/bluecircle"
        app:layout_constraintStart_toStartOf="@+id/bluecircle"
        app:layout_constraintTop_toTopOf="@+id/bluecircle"
        app:srcCompat="@drawable/a" />

    <ImageView
        android:id="@+id/threecircle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@id/UpRec"
        app:layout_constraintEnd_toEndOf="@id/UpRec"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@id/UpRec"
        app:layout_constraintTop_toTopOf="@id/UpRec"
        app:srcCompat="@drawable/t" />

    <TextView
        android:id="@+id/name"
        android:layout_width="89dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:text="@string/N"
        android:elevation="3dp"
        android:textColor="#00F9FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/UpRec"
        app:layout_constraintEnd_toEndOf="@id/UpRec"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@id/UpRec"
        app:layout_constraintTop_toTopOf="@id/UpRec"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/kos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/RID"
        android:textColor="#00F9FF"
        android:textSize="14sp"
        android:elevation="3dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/UpRec"
        app:layout_constraintEnd_toEndOf="@id/UpRec"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="@id/UpRec"
        app:layout_constraintTop_toTopOf="@id/UpRec"
        app:layout_constraintVertical_bias="0.64" />


</androidx.constraintlayout.widget.ConstraintLayout>